--- a/fullmodel.html
+++ b/fullmodel.html
@@ -1,4 +1,4 @@
-<!---<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title>Wisit us at vikingsling.com</title>
@@ -759,4 +759,4 @@
         </script>
 
 	</body>
-</html>--->
+</html>
