--- a/guiloader.html
+++ b/guiloader.html
@@ -334,8 +334,8 @@
                 loader.load(
                     // '/assets/img/product/jergensincfull.glb',
                     //'/assets/img/product/modelscene.glb',
-                   '/assets/img/product/chainhookangle.glb',
-                  // modelUrl,
+                   // '/assets/img/product/chainhookangle.glb',
+                   modelUrl,
                     function (object) {
                             let modelBox;
 
